Fix text alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -497,3 +497,8 @@ img {
     border: 1px solid darkgray;
     zoom: 2;
 }
+
+.content {
+    margin-left: 10px;
+    margin-right: 10px;
+}
